# travis-test

./: .travis.yml  CMakeLists.txt
ci/: build.sh  linux.sh  travis.sh  windows.sh
src/travis-test/: CMakeLists.txt  lib.cpp  lib.h
test/: CMakeLists.txt  test.cpp
